# neovide-tabs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/msix/: AppxManifest.xml
.github/workflows/: release-msi.yml  release-msix.yml
installer/: License.rtf  Package.wxs
openspec/: project.md
openspec/changes/add-custom-titlebar/: design.md  proposal.md  tasks.md
openspec/changes/add-svg-icon-support/: design.md  proposal.md  tasks.md
openspec/changes/add-tab-profiles/: proposal.md  tasks.md
openspec/changes/archive/2025-11-29-add-config-capability/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-29-add-tab-profiles/: design.md  tasks.md
openspec/changes/archive/2025-11-29-add-tab-support/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-29-add-windows-scaffold/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-29-enhance-close-behavior/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-29-improve-process-shutdown/: proposal.md  tasks.md
openspec/changes/archive/2025-11-30-add-global-hotkeys/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-30-bundle-default-icon/: proposal.md  tasks.md
openspec/changes/archive/2025-11-30-generate-default-config/: proposal.md  tasks.md
openspec/specs/app-config/: spec.md
openspec/specs/window-management/: spec.md
scripts/: build-msi.ps1  build-msix.ps1  generate-installer-assets.ps1
src/: config.rs  hotkeys.rs  icons.rs  main.rs  process.rs  tabs.rs  watcher.rs  window.rs
(+28 files in other folders)
