[package]
name = "neovide-tabs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dirs = "5.0"
image = "0.25.9"
notify = "7.0"
notify-debouncer-mini = "0.5"
resvg = "0.45"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }
